--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <li><a href="">Contact</a></li>
             </ul>
             <ul>
-                <li><a class="logo" href=""><img src="./assets/Union.png" alt=""> LAMTECT</a></li>
+                <li><a href=""><img src="./assets/Union.png" alt="" width="59.3px" height="46.87px"><span class="lam">LAMTECH</span></a></li>
                 <li class="hideonMobile"><a href="">home</a></li>
                 <li class="hideonMobile"><a href="">porfolio</a></li>
                 <li class="hideonMobile"><a href="">Services</a></li>
@@ -46,5 +46,8 @@
             }
         </script>
     </header>
+    <main>
+        <div></div>
+    </main>
 </body>
 </html>
